force-app/main/default/objects/b3o__Document_Pack__c/b3o__Document_Pack__c.object-meta.xml
<CustomObject>
    <label>Document Pack</label>
    <nameField>
        <label>Document Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>