force-app/main/default/objects/b3o__Document_Pack__c/fields/b3o__Disabled__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>