force-app/main/default/objects/b3o__Document_Pack__c/fields/b3o__Public_Description__c.field-meta.xml
<CustomField>
    <fullName>b3o__Public_Description__c</fullName>
    <label>Public Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>