force-app/main/default/objects/b3o__Document_Pack__c/fields/b3o__Submit_in_Order__c.field-meta.xml
<CustomField>
    <fullName>b3o__Submit_in_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user will be required to submit all the documents in the order defined, i.e. they can only submit the first document before proceeding to the second.</inlineHelpText>
    <label>Submit in Order</label>
    <type>Checkbox</type>
</CustomField>