force-app/main/default/objects/b3o__Document_Pack__c/listViews/b3o__All.listView-meta.xml
<ListView>
    <fullName>b3o__All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Disabled__c</columns>
    <columns>b3o__Public_Description__c</columns>
    <columns>b3o__Submit_in_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>